--- a/templates/_header.html
+++ b/templates/_header.html
@@ -9,7 +9,7 @@
         <a class="navbar-brand" href="{% url 'base:index' %}">
             {% cloudinary "Assets/logo_dhkemf.webp" alt="Logo" class="logo" fetch_format="webp" quality="auto:eco" width=65 height=65 sign_url=True %}
             <span>
-                Al-Hakim
+                Al-Haki
             </span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar1"
