--- a/templates/_header.html
+++ b/templates/_header.html
@@ -7,7 +7,7 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar__custom">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'base:index' %}">
-            {% cloudinary "Assets/logo_dhkemf.webp" alt="Logo" class="logo" fetch_format="webp" quality="auto:eco" width=65 height=65 sign_url=True %}
+            {% cloudinary "Assets/logo_dhkemf_onl6x2.webp" alt="Logo" class="logo" fetch_format="webp" quality="auto:eco" width=65 height=65 sign_url=True %}
             <span>
                 Al-Hakim
             </span>
