--- a/templates/_base.html
+++ b/templates/_base.html
@@ -94,11 +94,8 @@
             gtag("config", "G-KYVZBT048N");
         </script>
 
-        <script
-            async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6649196712661613"
-            crossorigin="anonymous"
-        ></script>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8960267600729169"
+            crossorigin="anonymous"></script>
 
         <link type="text/css" rel="stylesheet" href="{% static 'css/toast.css' %}" />
         
