Changed email conf

--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -212,7 +212,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/anatomy_ilavy6.webp" alt="sp1" loading="lazy" style="filter: invert(0%); object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "Assets/anatomy_cor9rr.webp" alt="sp1" loading="lazy" style="filter: invert(0%); object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "طب باطني" %}
@@ -223,7 +223,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/tooth_qdqner.webp" alt="sp2" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "Assets/dental_xrfmtv.webp" alt="sp2" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "طب الأسنان" %}
@@ -234,7 +234,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/eye_z9k93m.webp" alt="sp3" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "Assets/eye_mxrvle.webp" alt="sp3" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "طب العيون وجراحتها" %}
@@ -245,7 +245,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/bone_uomzac.webp" alt="sp4" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "Assets/bone_yeonno.webp" alt="sp4" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "جراحة العظام والمفاصل" %}
@@ -256,7 +256,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/surgery_dalq2g.webp" alt="sp5" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "Assets/surgery_axiutl.webp" alt="sp5" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "الجراحة" %}
@@ -267,7 +267,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/ear_dv0gzb.webp" alt="sp6" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "Assets/ear_fjomza.webp" alt="sp6" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "طب الأذن و الأنف و الحنجرة" %}
