Changed email conf

--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -245,7 +245,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch" style="cursor: pointer;" onclick="location.href='{% url "base:consult" %}';">
                     <div class="icon-box">
                         <div class="icon">
-                            {% cloudinary "Assets/bone_yeonno.webp" alt="sp4" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
+                            {% cloudinary "bone_yeonno.webp" alt="sp4" loading="lazy" style="object-fit: cover;" fetch_format="webp" quality="auto:eco" width=60 height=60 sign_url=True %}
                         </div>
                         <h4>
                             {% trans "جراحة العظام والمفاصل" %}
