Changed email conf

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -36,7 +36,7 @@
     <section class="d-flex justify-content-between login__section">
 
         <div class="d-flex justify-content-center w-50 mb-5 login__form-container1">
-            {% cloudinary "Assets/register_ptmjz3.webp" class="img-fluid rounded register__img" alt="Register Image" fetch_format="webp" quality="auto:eco" width=550 crop="scale" sign_url=True %}
+            {% cloudinary "register.webp" class="img-fluid rounded register__img" alt="Register Image" fetch_format="webp" quality="auto:eco" crop="scale" sign_url=True %}
         </div>
 
         <div class="d-flex justify-content-center w-50 mb-5 login__form-container2">
