--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,15 +32,10 @@
         />
 
         {% if LANGUAGE_CODE == 'en' %}
-        <link
-            rel="preload"
-            href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;700&display=swap"
-            as="style"
-        />
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;700&display=swap"
-        />
+
+        <link href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        
+
         <link
             rel="stylesheet"
             type="text/css"
