--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,10 +32,13 @@
         />
 
         {% if LANGUAGE_CODE == 'en' %}
-
+   
         <link href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         
-
+        <link
+                rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+                />
         <link
             rel="stylesheet"
             type="text/css"
