--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
 .user__logo {
   object-fit: cover;
 }
+
 #hero h1,
 #hero h2,
 .section-title h2,
@@ -1063,4 +1064,8 @@ h6 {
   background-color: #fec615 !important;
   color: #fff !important;
   text-shadow: 1px 1px 3px #977b00;
+}
+.fa-solid {
+  font-family: "Font Awesome 6 Free" !important;
+  font-weight: 900 !important;
 }
