changing hero photo

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -37,7 +37,7 @@
                     <div class="row g-0">
                     <div class="col-auto my-auto">
                         <div class="bot-icon">
-                            <i class="fas fa-message pt-1"></i>
+                            <i class="fa-solid fa-message pt-1"></i>
                         </div>
                     </div>
                     <div class="col">
