--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,7 +124,7 @@ body {
 #hero {
   width: 100%;
   height: 90vh;
-  background: url(https://res.cloudinary.com/dbu8r3bfm/image/upload/s--CozOp2_U--/f_webp,fl_force_strip,q_auto:eco/v1680225440/Assets/hero-bg_yjfnqc.webp)
+  background: url(https://res.cloudinary.com/dzi970tor/image/upload/v1754745302/photo_2025-08-09_15-13-19_i03wnf.jpg)
     top center/cover;
   margin-bottom: -200px;
   text-align: left;
